--- a/class20/class20_pandas_assignment.ipynb
+++ b/class20/class20_pandas_assignment.ipynb
@@ -107,14 +107,14 @@
             "wait_interval": 0
           },
           "base_uri": "https://localhost:8080/",
-          "height": 2016
+          "height": 2789
         },
-        "outputId": "fffe837c-5fa8-43f4-b796-4f42ddd10dd1",
+        "outputId": "8e8fff50-8a82-4af7-a271-35af06b9c2ff",
         "executionInfo": {
           "status": "ok",
-          "timestamp": 1530861014819,
+          "timestamp": 1530864967027,
           "user_tz": -330,
-          "elapsed": 1460,
+          "elapsed": 1607,
           "user": {
             "displayName": "nihal gaurav",
             "photoUrl": "//lh3.googleusercontent.com/-ryaAZ4ewcPc/AAAAAAAAAAI/AAAAAAAALRY/K5yLU3tEJrw/s50-c-k-no/photo.jpg",
@@ -129,9 +129,11 @@
         "print(\"first five row :\\n\",df.head(5))\n",
         "print(\"first ten row :\\n\",df.head(10))\n",
         "print(df.describe())\n",
-        "\n"
+        "print(\"last five rows\\n\",df.tail(5))\n",
+        "print(\"statistics on MaxTemp\\n\",df.MaxTemp.describe())\n",
+        "print(\"statistic on 2nd column\\n\",df.Location.describe())"
       ],
-      "execution_count": 19,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +256,53 @@
             "25%     14.150000    0.000000  \n",
             "50%     18.550000    0.000000  \n",
             "75%     24.000000    0.200000  \n",
-            "max     34.500000   39.800000  \n"
+            "max     34.500000   39.800000  \n",
+            "last five rows\n",
+            "            Date  Location  MinTemp  MaxTemp  Rainfall  Evaporation  Sunshine  \\\n",
+            "361  10/27/2008  Canberra      9.0     30.7       0.0          7.6      12.1   \n",
+            "362  10/28/2008  Canberra      7.1     28.4       0.0         11.6      12.7   \n",
+            "363  10/29/2008  Canberra     12.5     19.9       0.0          8.4       5.3   \n",
+            "364  10/30/2008  Canberra     12.5     26.9       0.0          5.0       7.1   \n",
+            "365  10/31/2008  Canberra     12.3     30.2       0.0          6.0      12.6   \n",
+            "\n",
+            "    WindGustDir  WindGustSpeed WindDir9am      ...      Humidity3pm  \\\n",
+            "361         NNW           76.0        SSE      ...               15   \n",
+            "362           N           48.0        NNW      ...               22   \n",
+            "363         ESE           43.0        ENE      ...               47   \n",
+            "364          NW           46.0        SSW      ...               39   \n",
+            "365          NW           78.0         NW      ...               13   \n",
+            "\n",
+            "     Pressure9am  Pressure3pm  Cloud9am  Cloud3pm  Temp9am  Temp3pm  \\\n",
+            "361       1016.1       1010.8         1         3     20.4     30.0   \n",
+            "362       1020.0       1016.9         0         1     17.2     28.2   \n",
+            "363       1024.0       1022.8         3         2     14.5     18.3   \n",
+            "364       1021.0       1016.2         6         7     15.8     25.9   \n",
+            "365       1009.6       1009.2         1         1     23.8     28.6   \n",
+            "\n",
+            "     RainToday  RISK_MM  RainTomorrow  \n",
+            "361         No      0.0            No  \n",
+            "362         No      0.0            No  \n",
+            "363         No      0.0            No  \n",
+            "364         No      0.0            No  \n",
+            "365         No      0.0            No  \n",
+            "\n",
+            "[5 rows x 24 columns]\n",
+            "statistics on MaxTemp\n",
+            " count    366.000000\n",
+            "mean      20.550273\n",
+            "std        6.690516\n",
+            "min        7.600000\n",
+            "25%       15.025000\n",
+            "50%       19.650000\n",
+            "75%       25.500000\n",
+            "max       35.800000\n",
+            "Name: MaxTemp, dtype: float64\n",
+            "statistic on 2nd column\n",
+            " count          366\n",
+            "unique           1\n",
+            "top       Canberra\n",
+            "freq           366\n",
+            "Name: Location, dtype: object\n"
           ],
           "name": "stdout"
         }
